RESOLVED FIXED72256
Web Inspector: console's protocol payload does not have url and line properties.
https://bugs.webkit.org/show_bug.cgi?id=72256
Summary Web Inspector: console's protocol payload does not have url and line properties.
Pavel Feldman
Reported 2011-11-14 04:33:04 PST
Invoke console.log, watch the protocol payloads. url and line properties come blank, one needs to use stackTrace property to compute the url.
Attachments
Patch (6.20 KB, patch)
2011-11-14 05:07 PST, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2011-11-14 05:07:33 PST
Yury Semikhatsky
Comment 2 2011-11-14 05:33:38 PST
Comment on attachment 114920 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=114920&action=review > Source/WebCore/inspector/ConsoleMessage.cpp:71 > + ScriptCallFrame frame = callStack->at(0); Should be const ScriptCallFrame& frame
Pavel Feldman
Comment 3 2011-11-14 06:14:45 PST
Note You need to log in before you can comment on or make changes to this bug.