Web Inspector: console's protocol payload does not have url and line properties. https://bugs.webkit.org/show_bug.cgi?id=72256

Reviewed by Yury Semikhatsky.

Source/WebCore:

Test: inspector/console/console-url-and-line.html

* inspector/ConsoleMessage.cpp:
(WebCore::ConsoleMessage::ConsoleMessage):
* inspector/front-end/ConsoleMessage.js:
(WebInspector.ConsoleMessageImpl):

LayoutTests:

* inspector/console/console-url-and-line-expected.txt: Added.
* inspector/console/console-url-and-line.html: Added.
* inspector/protocol/console-agent-expected.txt:

Canonical link: https://commits.webkit.org/88694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100137 268f45cc-cd09-0410-ab3c-d52691b4dbfc